--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
-  "name": "pure",
-  "version": "0.3.1-pre",
+  "name": "Keemple",
+  "version": "0.0.1",
   "devDependencies": {
-    "normalize-css": "1.1.3"
+    "normalize-css": "latest"
   }
 }
