--- a/.csslintrc
+++ b/.csslintrc
@@ -1,4 +1,6 @@
 {
   "unqualified-attributes" : false,
-  "important" : false
+  "important" : false,
+  "outline-none" : false,
+  "box-sizing" : false
 }
